# IoT_Spring_2025

./: CMakeLists.txt  README.md  main.c
Assignments/: Assignment 1.c  Assignment 10.c  Assignment 11.c  Assignment 12.c  Assignment 13.c  Assignment 14.c  Assignment 15.c  Assignment 16.c  Assignment 17.c  Assignment 18.c  Assignment 19.c  Assignment 2.c  Assignment 20.c  Assignment 21.c  Assignment 3.c  Assignment 4.c  Assignment 5.c  Assignment 6.c  Assignment 7.c  Assignment 8.c  Assignment 9.c
Notes/Basics/: datatypes.c  formatspecifiers.c  hello_world.c  variables.c
Notes/Inputs/: room_temp_converter.c  user_input.c  userinput.c
Notes/Math/: arithmeticoperators.c  augmented_ari_operators.c  calculator_program.c  circlecircum.c  constants.c  distance_calc_and_formula.c  hypotenuse_calc.c  math_functions.c
Notes/Pointers/: pointers.c
Notes/Statements/: if_statements.c  logical_operators.c  logicaloperators.c  switch_statements.c
